--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,9 @@ services:
     build: ./web
     ports:
       - 5173:5173
+    networks:
+      my_network:
+        ipv4_address: 182.30.0.10
     working_dir: /app-frontend
     # Os `healthcheck` devem garantir que a aplicação
     # está operacional, antes de liberar o container
@@ -22,6 +25,9 @@ services:
     build: ./api 
     ports:
       - 3001:3001
+    networks:
+      my_network:
+        ipv4_address: 182.30.0.11
     working_dir: /app-backend
     # Caso queira que o container esteja atualizado durante o desenvolvimento, sem que você precise ficar fazendo down e up dos containers, descomente as 3 linhas abaixo
     # command: dev 
@@ -49,6 +55,9 @@ services:
     container_name: app_database_match 
     ports:
       - 3306:3306
+    networks:
+      my_network:
+        ipv4_address: 182.30.0.12
     environment:
       - MYSQL_ROOT_PASSWORD=senha_mysql 
     restart: 'always'
@@ -58,3 +67,8 @@ services:
       retries: 5
     cap_add:
       - SYS_NICE # Deve omitir alertas menores
+networks:
+  my_network:
+    ipam:
+      config:
+        - subnet: 182.30.0.0/16
